main terminado: estilos de botones

--- a/index.html
+++ b/index.html
@@ -47,8 +47,10 @@
                 <img src="" alt="" />
           </a>
         </div>
-            <button class="boton-google">Buscar con Google</button>
-            <button class="boton-suerte">Me siento con suerte</button>
+        <div class="formulario-botones">
+            <button class="boton">Buscar con Google</button>
+            <button class="boton">Me siento con suerte</button>
+        </div>
       </form>
     </main>
   </body>
