Terminada la estructura y estilo del footer

--- a/index.html
+++ b/index.html
@@ -53,5 +53,33 @@
         </div>
       </form>
     </main>
+    <footer class="footer">
+        <ul class="footer__izquierdo">
+            <li>
+                <a href="" class="footer__enlace">Publicidad</a>
+            </li>
+            <li>
+                <a href="" class="footer__enlace">Negocios</a>
+            </li>
+            <li>
+                <a href="" class="footer__enlace">Acerca de</a>
+            </li>
+            <li>
+                <a href="" class="footer__enlace">Cómo funciona la busqueda</a>
+            </li>
+            
+        </ul>
+        <ul class="footer__derecho">
+            <li>
+                <a href="" class="footer__enlace">Privacidad</a>
+            </li>
+            <li>
+                <a href="" class="footer__enlace">Condiciones</a>
+            </li>
+            <li>
+                <a href="" class="footer__enlace">Preferencias</a>
+            </li>
+        </ul>
+    </footer>
   </body>
 </html>
